--- a/src/Gomoku.Api/appsettings.Development.json
+++ b/src/Gomoku.Api/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "GomokuDb": "Host=127.0.0.1;Database=postgres;Username=postgres;Password=1d#f%gdsVC45#!!"
   }
 }
