--- a/src/Gomoku.Core/Gomoku.Core.csproj
+++ b/src/Gomoku.Core/Gomoku.Core.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Gomoku.DAL\Gomoku.DAL.csproj" />
   </ItemGroup>
 
