--- a/src/Gomoku.WebApp/package.json
+++ b/src/Gomoku.WebApp/package.json
@@ -30,5 +30,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@microsoft/signalr": "^8.0.0"
+	}
 }
