remove front waitinglist add random player names show board on players connected

--- a/src/Gomoku.WebApp/package.json
+++ b/src/Gomoku.WebApp/package.json
@@ -34,6 +34,7 @@
 	"dependencies": {
 		"@microsoft/signalr": "^8.0.0",
 		"@types/uuid": "^9.0.8",
+		"unique-names-generator": "^4.7.1",
 		"uuid": "^9.0.1"
 	}
 }
