add cors origins to appsettings

--- a/src/Gomoku.Api/appsettings.Development.json
+++ b/src/Gomoku.Api/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "GomokuDb": "Host=127.0.0.1;Database=postgres;Username=postgres;Password=1d#f%gdsVC45#!!"
-  }
+  },
+  "CorsOrigins": "http://localhost:5173"
 }
